k8s/overlays/shokohsc/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bookmarks
spec:
  hostnames:
    - bookmarks.home.arpa
  parentRefs:
    - name: cilium
      namespace: cilium
  rules:
    - backendRefs:
        - name: bookmarks
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
